--- a/public/index.html
+++ b/public/index.html
@@ -29,25 +29,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li class="motion">
-          Project
-          <a
-            href="#"
-            class="dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            >
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">First Project</a></li>
-            <li><a class="dropdown-item" href="#">Second Project</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Third Project</a></li>
-          </ul>
-        </li>
+        <li><a href="#">Project</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
@@ -55,80 +37,20 @@
     <!--Carousel-->
     <main>
       <h1>Muster Mustermann</h1>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide car" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg" alt="" class="d-block w-100 vh-100" />
-            <div class="carousel-caption d-none d-md-block text-end mb-5 pb-5">
-              <h1 class="display-5">One more for good measure.</h1>
-              <p>
-                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                Donec id elit non mi porta gravida at eget metus. Nullam id
-                dolor id nibh ultricies vehicula ut id elit.
-              </p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Browse gallery
-              </button>
-            </div>
+            <img src="../src/images/pawel-czerwinski-7FqOISWr5V0-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
-
           <div class="carousel-item">
-            <img src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg" class="d-block w-100 vh-100" alt="" />
-            <div class="carousel-caption d-none d-md-block text-end mb-5 pb-5">
-              <h1 class="display-5">Another example headline.</h1>
-              <p>
-                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                Donec id elit non mi porta gravida at eget metus. Nullam id
-                dolor id nibh ultricies vehicula ut id elit.
-              </p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Learn more
-              </button>
-            </div>
+            <img src="../src/images/pawel-czerwinski-sXESiqE2gN0-unsplash (1).jpg" class="d-block w-100" alt="...">
           </div>
-
           <div class="carousel-item">
-            <img src="../src/images/christopher-gower-m_HRfLhgABo-unsplash.jpg" class="d-block w-100 vh-100" alt="" />
-            <div
-              class="carousel-caption d-none d-md-block text-start mb-5 pb-5"
-            >
-              <h1 class="display-5">Example headline.</h1>
-              <p>
-                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                Donec id elit non mi porta gravida at eget metus. Nullam id
-                dolor id nibh ultricies vehicula ut id elit.
-              </p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Sign up today
-              </button>
-            </div>
+            <img src="../src/images/pawel-czerwinski-95QNbCkVERM-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
-
-        <a
-          class="carousel-control-prev"
-          href="#myCarousel"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-
-        <a
-          class="carousel-control-next"
-          href="#myCarousel"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
       </div>
-      <h2>web developer</h2>
+      <h1 class="bottom">web developer</h1>
     </main>
 
     <script
