--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,37 @@
       <h1 class="bottom">web developer</h1>
     </main>
 
+    <div class="contact">
+      <div class="big">
+        <h1>
+          Let's work together
+        </h1>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+        <form action="#">
+          <div class="part">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Your name">
+          </div>
+          <div class="part">
+            <label for="email">Your email</label>
+            <input type="text" name="email" id="email" placeholder="Your email address">
+          </div>
+          <div class="part">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
+          </div>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+    <footer>
+      <span>2022 Germany</span>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
