--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
     <!--Carousel-->
     <main>
-      <h1>Muster Mustermann</h1>
+      <h1>Kübra <i>Gümüssoy</i></h1>
       <div id="carouselExampleSlidesOnly" class="carousel slide car" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -59,9 +59,9 @@
           Let's work together
         </h1>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
         </ul>
         <form action="#">
           <div class="part">
@@ -74,15 +74,18 @@
           </div>
           <div class="part">
             <label for="message">Message</label>
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
+            <textarea name="message" id="message" cols="30" rows="5" placeholder="Enter your message"></textarea>
           </div>
+          <div class="but">
           <button type="submit">Submit</button>
+        </div>
         </form>
       </div>
+      <footer>
+        <h6>2022 Germany</h6>
+      </footer>
     </div>
-    <footer>
-      <span>2022 Germany</span>
-    </footer>
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
