create about page

--- a/public/about.html
+++ b/public/about.html
@@ -26,12 +26,60 @@
 <body>
     <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="#">Project</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+
+      <div class="about">
+        <div class="img-cont">
+          <img src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="">
+        </div>
+        <div class="heading">
+          <h1 class="huge">
+            My story & career
+          </h1>
+        </div>
+      </div>
+      <div class="story">
+
+      </div>
+      <div class="contact">
+        <div class="big">
+          <h1>
+            Let's work together
+          </h1>
+          <ul>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          </ul>
+          <form action="#">
+            <div class="part">
+              <label for="name">Name</label>
+              <input type="text" name="name" id="name" placeholder="Your name">
+            </div>
+            <div class="part">
+              <label for="email">Your email</label>
+              <input type="text" name="email" id="email" placeholder="Your email address">
+            </div>
+            <div class="part">
+              <label for="message">Message</label>
+              <textarea name="message" id="message" cols="30" rows="5" placeholder="Enter your message"></textarea>
+            </div>
+            <div class="but">
+            <button type="submit">Submit</button>
+          </div>
+          </form>
+        </div>
+        <footer>
+          <h6>2022 Germany</h6>
+
+      </div>
+
+
     
     
 </body>
