--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <!--Navbar-->
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="#">Project</a></li>
         <li><a href="#">Contact</a></li>
@@ -52,6 +52,8 @@
       </div>
       <h1 class="bottom">web developer</h1>
     </main>
+
+    <!--Contact Part-->
 
     <div class="contact">
       <div class="big">
