--- a/public/about.html
+++ b/public/about.html
@@ -33,17 +33,40 @@
         </ul>
       </nav>
 
-      <div class="about">
+      <div class="about-me">
         <div class="img-cont">
-          <img src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="">
+          <img src="../src/images/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="">
         </div>
         <div class="heading">
           <h1 class="huge">
-            My story & career
+            My story & education
           </h1>
         </div>
       </div>
       <div class="story">
+        <p class="p-huge">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam maiores ducimus commodi consequatur autem culpa?
+        </p>
+        <div class="p-body">
+          <p class="p-bold">My story</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi a quibusdam minus praesentium exercitationem quas ullam. Voluptatibus, quod nam consequuntur fuga, vel quis quisquam minima totam et, officia enim deleniti voluptatem autem perferendis aliquam molestias?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, cumque.
+          </p>
+        </div>
+        <div class="p-body">
+          <p class="p-bold">Education</p>
+          <p>
+            <strong>Web Developer @ Digital Career Institute
+            </strong>
+            <span>Jan 2022 - Jan 2023</span>
+          </p>
+          <p>
+            <strong>Lorem ipsum dolor sit.
+            </strong>
+            <span>Oct 2021 - June 2022</span>
+          </p>
+        </div>
+
 
       </div>
       <div class="contact">
