--- a/public/about.html
+++ b/public/about.html
@@ -47,15 +47,20 @@
         <p class="p-huge">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam maiores ducimus commodi consequatur autem culpa?
         </p>
-        <div class="p-body">
-          <p class="p-bold">My story</p>
+        <div class="p-body-a">
+          <p class="p-bold-a">My story</p>
+        </div>
+        <div class="div-a">
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi a quibusdam minus praesentium exercitationem quas ullam. Voluptatibus, quod nam consequuntur fuga, vel quis quisquam minima totam et, officia enim deleniti voluptatem autem perferendis aliquam molestias?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, cumque.
           </p>
         </div>
-        <div class="p-body">
-          <p class="p-bold">Education</p>
-          <p>
+
+        <div class="p-body-b">
+          <p class="p-bold-b">Education</p>
+          </div>
+          <div class="div-b">
+            <p>
             <strong>Web Developer @ Digital Career Institute
             </strong>
             <span>Jan 2022 - Jan 2023</span>
