--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="#">Project</a></li>
+        <li><a href="./projects.html">Project</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
