link for contact added

--- a/public/contact.html
+++ b/public/contact.html
@@ -30,7 +30,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./projects.html">Project</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#scroll">Contact</a></li>
         </ul>
       </nav>
     
@@ -42,9 +42,11 @@
 
        <div class="contact">
         <div class="big">
-          <h1>
-            Let's work together
-          </h1>
+            <a id="scroll">
+                <h1>
+                  Let's work together
+                </h1>
+              </a>
           <ul>
             <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
