--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,9 @@
     <!--Navbar-->
     <nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./projects.html">Project</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#scroll">Contact</a></li>
       </ul>
     </nav>
 
@@ -54,12 +53,15 @@
     </main>
 
     <!--Contact Part-->
+    
 
     <div class="contact">
       <div class="big">
+        <a id="scroll">
         <h1>
           Let's work together
         </h1>
+      </a>
         <ul>
           <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
