--- a/public/about.html
+++ b/public/about.html
@@ -29,7 +29,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./projects.html">Project</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#scroll">Contact</a></li>
         </ul>
       </nav>
 
@@ -79,9 +79,11 @@
       </div>
       <div class="contact">
         <div class="big">
-          <h1>
-            Let's work together
-          </h1>
+          <a id="scroll">
+            <h1>
+              Let's work together
+            </h1>
+          </a>
           <ul>
             <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
