link of social media added

--- a/public/projects.html
+++ b/public/projects.html
@@ -72,13 +72,13 @@
           </a>
         <ul>
           <li>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://github.com/Adanurk"><i class="fa-brands fa-github"></i></a>
           </li>
           <li>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/k%C3%BCbra-g%C3%BCm%C3%BCssoy-21b9251b6/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
           </li>
         </ul>
         <form action="#">
