--- a/public/projects.html
+++ b/public/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../src/images/my-favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,48 +38,72 @@
     <!--projects-->
 
     <main class="projects">
-        <div class="projects__items">
-          <div class="projects__item">
-            <img src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg" alt="My Project" />
-          </div>
-  
-          <div class="projects__item">
-            <img src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg" alt="My Project" />
-          </div>
-          <div class="projects__item">
-            <img src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg" alt="My Project" />
-          </div>
-          <div class="projects__item">
-            <img src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="My Project" />
-          </div>
-  
-          <div class="projects__item">
-            <img src="../src/images/lauren-mancke-aOC7TSLb1o8-unsplash.jpg" alt="My Project" />
-          </div>
-          <div class="projects__item">
-            <img src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="My Project" />
-          </div>
+      <div class="projects__items">
+        <div class="projects__item">
+          <img
+            src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
+            alt="My Project"
+          />
         </div>
-      </main>
+
+        <div class="projects__item">
+          <img
+            src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg"
+            alt="My Project"
+          />
+        </div>
+        <div class="projects__item">
+          <img
+            src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg"
+            alt="My Project"
+          />
+        </div>
+        <div class="projects__item">
+          <img
+            src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
+            alt="My Project"
+          />
+        </div>
+
+        <div class="projects__item">
+          <img
+            src="../src/images/lauren-mancke-aOC7TSLb1o8-unsplash.jpg"
+            alt="My Project"
+          />
+        </div>
+        <div class="projects__item">
+          <img
+            src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
+            alt="My Project"
+          />
+        </div>
+      </div>
+    </main>
 
     <!--Contact Part-->
 
     <div class="contact">
       <div class="big">
         <a id="scroll">
-            <h1>
-              Let's work together
-            </h1>
-          </a>
+          <h1>Let's work together</h1>
+        </a>
         <ul>
           <li>
-            <a href="https://github.com/Adanurk"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/Adanurk" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/adanurk/" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/k%C3%BCbra-g%C3%BCm%C3%BCssoy-21b9251b6/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a
+              href="https://www.linkedin.com/in/k%C3%BCbra-g%C3%BCm%C3%BCssoy-21b9251b6/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
           </li>
         </ul>
         <form action="#">
