project links added

--- a/public/projects.html
+++ b/public/projects.html
@@ -40,42 +40,54 @@
     <main class="projects">
       <div class="projects__items">
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Parallax-Website/">
           <img
             src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
-            alt="My Project"
+            alt="Parallax-Website"
           />
+        </a>
         </div>
 
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Sass-Project-My-Page/">
           <img
             src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg"
-            alt="My Project"
+            alt="Portfolio-Website"
           />
+        </a>
         </div>
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Responsive-Website-Bootstrap/">
           <img
             src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg"
-            alt="My Project"
+            alt="Bootstrap-Website"
           />
+        </a>
         </div>
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Netflix-Survey-Page/">
           <img
             src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
-            alt="My Project"
+            alt="Netflix-Survey-Page"
           />
+        </a>
         </div>
 
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Google-Landing-Page/">
           <img
             src="../src/images/lauren-mancke-aOC7TSLb1o8-unsplash.jpg"
-            alt="My Project"
+            alt="Google-Landing-Page"
           />
+        </a>
         </div>
         <div class="projects__item">
+            <a href="https://adanurk.github.io/Tour-Places-React-Project/">
           <img
             src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
-            alt="My Project"
+            alt="Tour-Places-React-Project"
           />
+        </a>
         </div>
       </div>
     </main>
