--- a/public/projects.html
+++ b/public/projects.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../src/images/my-favicon.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../src/images/my-favicon.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,56 +43,65 @@
 
     <main class="projects">
       <div class="projects__items">
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Parallax-Website/">
+        <a
+          href="https://adanurk.github.io/Parallax-Website/"
+          class="projects__item"
+        >
           <img
             src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
             alt="Parallax-Website"
           />
         </a>
-        </div>
 
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Sass-Project-My-Page/">
+        <a
+          href="https://adanurk.github.io/Sass-Project-My-Page/"
+          class="projects__item"
+        >
           <img
             src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg"
             alt="Portfolio-Website"
           />
         </a>
-        </div>
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Responsive-Website-Bootstrap/">
+
+        <a
+          href="https://adanurk.github.io/Responsive-Website-Bootstrap/"
+          class="projects__item"
+        >
           <img
             src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg"
             alt="Bootstrap-Website"
           />
         </a>
-        </div>
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Netflix-Survey-Page/">
+
+        <a
+          href="https://adanurk.github.io/Netflix-Survey-Page/"
+          class="projects__item"
+        >
           <img
             src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
             alt="Netflix-Survey-Page"
           />
         </a>
-        </div>
 
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Google-Landing-Page/">
+        <a
+          href="https://adanurk.github.io/Google-Landing-Page/"
+          class="projects__item"
+        >
           <img
             src="../src/images/lauren-mancke-aOC7TSLb1o8-unsplash.jpg"
             alt="Google-Landing-Page"
           />
         </a>
-        </div>
-        <div class="projects__item">
-            <a href="https://adanurk.github.io/Tour-Places-React-Project/">
+
+        <a
+          href="https://adanurk.github.io/Tour-Places-React-Project/"
+          class="projects__item"
+        >
           <img
             src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
             alt="Tour-Places-React-Project"
           />
         </a>
-        </div>
       </div>
     </main>
 
