--- a/public/projects.html
+++ b/public/projects.html
@@ -48,7 +48,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
+            src="../src/images/1.png"
             alt="Parallax-Website"
           />
         </a>
@@ -58,7 +58,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/ben-kolde-FaPxZ88yZrw-unsplash.jpg"
+            src="../src/images/2.png"
             alt="Portfolio-Website"
           />
         </a>
@@ -68,7 +68,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg"
+            src="../src/images/3.png"
             alt="Bootstrap-Website"
           />
         </a>
@@ -78,7 +78,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
+            src="../src/images/4.png"
             alt="Netflix-Survey-Page"
           />
         </a>
@@ -88,7 +88,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/lauren-mancke-aOC7TSLb1o8-unsplash.jpg"
+            src="../src/images/5.png"
             alt="Google-Landing-Page"
           />
         </a>
@@ -98,7 +98,7 @@
           class="projects__item"
         >
           <img
-            src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg"
+            src="../src/images/6.png"
             alt="Tour-Places-React-Project"
           />
         </a>
