--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../src/images/my-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/my-favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../src/styles/styles.css" />
+    <link rel="stylesheet" href="./src/styles/styles.css" />
     <script
       src="https://kit.fontawesome.com/9ac68edd7c.js"
       crossorigin="anonymous"
@@ -28,8 +28,8 @@
     <!--Navbar-->
     <nav>
       <ul>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./projects.html">Project</a></li>
+        <li><a href="./public/about.html">About</a></li>
+        <li><a href="./public/projects.html">Project</a></li>
         <li><a href="#scroll">Contact</a></li>
       </ul>
     </nav>
@@ -40,13 +40,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide car" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../src/images/pawel-czerwinski-7FqOISWr5V0-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="./src/images/pawel-czerwinski-7FqOISWr5V0-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="./src/images/clement-helardot-95YRwf6CNw8-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="./src/images/joanna-kosinska-1_CMoFsPfso-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
