--- a/public/about.html
+++ b/public/about.html
@@ -27,7 +27,7 @@
 <body>
     <nav>
         <ul>
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./projects.html">Project</a></li>
           <li><a href="#scroll">Contact</a></li>
