--- a/public/contact.html
+++ b/public/contact.html
@@ -28,7 +28,7 @@
      <!--Navbar-->
      <nav>
         <ul>
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./projects.html">Project</a></li>
           <li><a href="#scroll">Contact</a></li>
